--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <title>지은개발</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="/Web.css">
+        <script></script>
+    </head>
+    <body>
+        Hello World!
+    </body>
 </html>
