--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>지은개발</title>
+        <title>JINNY SOFT</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/Web.css">
         <script></script>
     </head>
     <body>
-        Hello World!
+        변경 테스트
     </body>
 </html>
