--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Stellar by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <meta name="google-site-verification" content="iv-HwmNqoFFW5w94Nmx54tINWoIRYQuYKWi9nYJe2LY" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
