--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Stellar by HTML5 UP</title>
+		<title>지니소프트</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta name="google-site-verification" content="iv-HwmNqoFFW5w94Nmx54tINWoIRYQuYKWi9nYJe2LY" />
@@ -21,9 +21,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>Stellar</h1>
-						<p>Just another free, fully responsive site template<br />
-						built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<h1>검색 엔진 테스트용 페이지</h1>
+						<p>테스트중인 페이지 입니다.</p>
 					</header>
 
 				<!-- Nav -->
