naver meta 데이터 추가

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta name="google-site-verification" content="iv-HwmNqoFFW5w94Nmx54tINWoIRYQuYKWi9nYJe2LY" />
+		
+		<meta property="og:type" content="website"> 
+		<meta property="og:title" content="지니소프트">
+		<meta property="og:description" content="지니소프트">
+		<!-- <meta property="og:image" content="http://www.mysite.com/myimage.jpg"> -->
+		<meta property="og:url" content="https://bje0507.github.io/">
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
