--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
-						<h1>검색 엔진 테스트용 페이지</h1>
-						<p>테스트중인 페이지 입니다.</p>
+						<h1>지니소프트 검색 엔진 테스트용 페이지</h1>
+						<p>지니소프트 태그 테스트중인 페이지 입니다.</p>
 					</header>
 
 				<!-- Nav -->
