--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta name="google-site-verification" content="iv-HwmNqoFFW5w94Nmx54tINWoIRYQuYKWi9nYJe2LY" />
 		
+		<meta name="title" content="지니소프트">
+		<meta name="description" content="지니소프트는 1인 개발회사입니다.">
+
 		<meta property="og:type" content="website"> 
 		<meta property="og:title" content="지니소프트">
 		<meta property="og:description" content="지니소프트">
